Change Ashwin image

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<span class="image">
 										<img src="https://avatars3.githubusercontent.com/u/7355977?s=460&v=4" alt="" />
 									</span>
-									<a href="https://www.github.com/fishdev">
+									<a href="/assets/images/ashwin.png">
 										<h2>Who is Ashwin</h2>
 										<div class="content">
 											<p>I'm bad at coming up with captions.</p>
