Changed ashwin icon

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="https://avatars3.githubusercontent.com/u/7355977?s=460&v=4" alt="" />
+										<img src="/assets/images/ashwin.png" alt="" />
 									</span>
-									<a href="/assets/images/ashwin.png">
+									<a href="https://www.github.com/fishdev">
 										<h2>Who is Ashwin</h2>
 										<div class="content">
 											<p>I'm bad at coming up with captions.</p>
