--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="/assets/images/ashwin.png" alt="" />
+										<img src="assets/images/ashwin.png" alt="" />
 									</span>
 									<a href="https://www.github.com/fishdev">
 										<h2>Who is Ashwin</h2>
@@ -229,7 +229,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Aditya Pillai. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; QuantumStack 2019. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
