Moved images, added CMULab

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 								<p>Making great technologies at Carnegie Mellon University.</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+								<article class="style5">
 									<span class="image">
-										<img src="assets/images/scotty-square.png" alt="" />
+										<img src="images/scotty-square.png" alt="" />
 									</span>
 									<a href="http://siorigin.quantumstack.xyz">
 										<h2>What is SIOrigin</h2>
@@ -69,6 +69,20 @@
 										</div>
 									</a>
 								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/flask.png" alt="" />
+									</span>
+									<a href="http://cmulab.quantumstack.xyz">
+										<h2>CMULab</h2>
+										<div class="content">
+											<p>Secure check-in and scoring. Easy for instructors, easy for students.</p>
+										</div>
+									</a>
+								</article>
+							</section>
+							<br />
+							<section class="tiles">
 								<article class="style2">
 									<span class="image">
 										<img src="https://avatars2.githubusercontent.com/u/29032680" alt="" />
@@ -82,7 +96,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="assets/images/ashwin.png" alt="" />
+										<img src="images/ashwin.png" alt="" />
 									</span>
 									<a href="https://www.github.com/fishdev">
 										<h2>Who is Ashwin</h2>
