--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 		<link rel="shortcut icon" type="image/png" href="images/logo.png"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
-		<!-- Global Site Tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-63643105-3"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133196682-2"></script>
 		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-		  gtag('config', 'UA-63643105-3');
+		gtag('config', 'UA-133196682-2');
 		</script>
+
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
