What is CMULab???

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<img src="images/flask.png" alt="" />
 									</span>
 									<a href="http://cmulab.quantumstack.xyz">
-										<h2>CMULab</h2>
+										<h2>What is CMULab</h2>
 										<div class="content">
 											<p>Secure check-in and scoring. Easy for instructors, easy for students.</p>
 										</div>
