--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<span class="image">
 										<img src="https://avatars2.githubusercontent.com/u/29032680" alt="" />
 									</span>
-									<a href="https://www.github.com/adityarpillai">
+									<a href="https://pillai.io">
 										<h2>Who is Aditya</h2>
 										<div class="content">
 											<p>Has no idea what he is doing here.</p>
@@ -107,9 +107,9 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/ashwin.png" alt="" />
+										<img src="https://avatars3.githubusercontent.com/u/7355977" alt="" />
 									</span>
-									<a href="https://www.github.com/fishdev">
+									<a href="https://fishdev.xyz">
 										<h2>Who is Ashwin</h2>
 										<div class="content">
 											<p>I'm bad at coming up with captions.</p>
