--- a/index.html
+++ b/index.html
@@ -66,10 +66,12 @@
 							<header>
 								<h1>We are <br />
 								<a href="https://www.github.com/quantumstack">QuantumStack</a>.</h1>
-								<p>Making great technologies at Carnegie Mellon University.</p>
+								<!-- <p>Making great technologies at Carnegie Mellon University.</p> -->
 							</header>
+
+
 							<section class="tiles">
-								<article class="style5">
+								<!-- <article class="style5">
 									<span class="image">
 										<img src="images/scotty-square.png" alt="" />
 									</span>
@@ -79,29 +81,42 @@
 											<p>Making Carnegie Mellon SIO less buggy <sup>(no pun intended)</sup></p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 								<article class="style1">
 									<span class="image">
 										<img src="images/flask.png" alt="" />
 									</span>
-									<a href="http://cmulab.quantumstack.xyz">
-										<h2>What is CMULab</h2>
+									<a href="https://cmulab.quantumstack.xyz">
+										<h2>CMULab</h2>
 										<div class="content">
 											<p>Secure check-in and scoring. Easy for instructors, easy for students.</p>
 										</div>
 									</a>
 								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="images/fence-square.png" alt="" style="width: 100%; height: 100%;" />
+									</span>
+									<a href="https://github.com/QuantumStack/VirtualFence-client">
+										<h2>Virtual Fence</h2>
+										<div class="content">
+											<p>To be unveiled...</p>
+										</div>
+									</a>
+								</article>
 							</section>
 							<br />
+
+							
 							<section class="tiles">
 								<article class="style2">
 									<span class="image">
 										<img src="https://avatars2.githubusercontent.com/u/29032680" alt="" />
 									</span>
 									<a href="https://pillai.io">
-										<h2>Who is Aditya</h2>
+										<h2>Aditya</h2>
 										<div class="content">
-											<p>Has no idea what he is doing here.</p>
+											<p>He's probably procrastinating.</p>
 										</div>
 									</a>
 								</article>
@@ -109,10 +124,54 @@
 									<span class="image">
 										<img src="https://avatars3.githubusercontent.com/u/7355977" alt="" />
 									</span>
-									<a href="https://fishdev.xyz">
-										<h2>Who is Ashwin</h2>
+									<a href="https://ashwins.me">
+										<h2>Ashwin</h2>
 										<div class="content">
-											<p>I'm bad at coming up with captions.</p>
+											<p>He's literally a goat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="https://avatars1.githubusercontent.com/u/22017374" alt="" />
+									</span>
+									<a href="https://github.com/chairmanlu">
+										<h2>Steven</h2>
+										<div class="content">
+											<p>Literally Mao Zedong.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style5">
+									<span class="image">
+										<img src="https://avatars0.githubusercontent.com/u/8451336" alt="" />
+									</span>
+									<a href="https://sayan.io">
+										<h2>Sayan</h2>
+										<div class="content">
+											<p>Not crazy, opposite.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="https://avatars3.githubusercontent.com/u/20322213" alt="" />
+									</span>
+									<a href="https://github.com/soumilm">
+										<h2>Soumil</h2>
+										<div class="content">
+											<p>Needs no introduction.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="https://avatars0.githubusercontent.com/u/25930859" alt="" />
+									</span>
+									<a href="https://deepayan.dev/">
+										<h2>Deepayan</h2>
+										<div class="content">
+											<p>Actually a Pine Tree?</p>
 										</div>
 									</a>
 								</article>
