--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<!-- <article class="style5">
 									<span class="image">
 										<img src="images/fence-square.png" alt="" style="width: 100%; height: 100%;" />
 									</span>
@@ -103,7 +103,7 @@
 											<p>To be unveiled...</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 							<br />
 
@@ -314,7 +314,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; QuantumStack 2019. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; QuantumStack 2020. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
